# cemu-ios-playable

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakeLists_Phase0.txt  CMakeLists_iOS.txt  CemuApp.swift  IMPLEMENTATION_COMPLETE.md  PHASE0_FINAL_STATUS.md  PHASE1_SPRINT_SUMMARY.md  README.md  README_FINAL.md  README_iOS.md  ROADMAP.md  STATUS.md  build_ios_a_chip.sh  vcpkg.json
.github/workflows/: build-ios-core.yml
build_ios_a_chip/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_ios_a_chip/dependencies/ih264d/: Makefile  cmake_install.cmake
build_ios_a_chip/dependencies/xbyak_aarch64/: Makefile  cmake_install.cmake  xbyak_aarch64Targets.cmake
build_ios_a_chip/src/: Makefile  cmake_install.cmake
build_ios_a_chip/src/Cafe/: Makefile  cmake_install.cmake
build_ios_a_chip/src/Cemu/: Makefile  cmake_install.cmake
build_ios_a_chip/src/Common/: Makefile  cmake_install.cmake
build_ios_a_chip/src/audio/: Makefile  cmake_install.cmake
build_ios_a_chip/src/config/: Makefile  cmake_install.cmake
build_ios_a_chip/src/gui/: Makefile  cmake_install.cmake
build_ios_a_chip/src/gui/iosgui/: Makefile  cmake_install.cmake
build_ios_a_chip/src/imgui/: Makefile  cmake_install.cmake
build_ios_a_chip/src/input/: Makefile  cmake_install.cmake
build_ios_a_chip/src/resource/: Makefile  cmake_install.cmake
build_ios_a_chip/src/util/: Makefile  cmake_install.cmake
cmake/: ios.cmake  ios.toolchain.cmake
docs/_archive_original_claims/: BUILD_AND_DEPLOY.md  DELIVERY_COMPLETE.md  DEPLOYMENT_GUIDE.md  FINAL_SESSION_STATUS.md  GITHUB_SETUP.md  IMPLEMENTATION_PATH.md  PHASE0.md  PHASE1_FINAL_DECISION.md  PHASE1_FINAL_STATUS.md  PHASE1_PRAGMATIC_COMPLETION.md  PHASE2_IMPLEMENTATION.md  README_SESSION.md  WORKFLOW_TRIGGER.md  iOS_OPTIMIZATION_GUIDE.md
docs/_archive_original_claims/retired_swift_toy/: CPUCore.swift  OptimizedEmulationEngine.swift
src/: CMakeLists.txt
src/Cafe/: CMakeLists.txt
src/Cafe/HW/Latte/Renderer/Metal/: MetalLayer.mm
src/Cemu/Logging/: CemuLogging.h
src/Common/: CMakeLists.txt  MemPtr_stub.h  SysAllocator.h  platform.h  precompiled.h
src/Common/ExceptionHandler/: ExceptionHandler.cpp  ExceptionHandler_posix.cpp
src/Common/glm_stub/: fmt_stub.h  glm.hpp
src/Common/glm_stub/gtc/: quaternion.hpp
src/Common/unix/: FileStream_unix.cpp
src/config/: CemuConfig.h  config_stubs_ios.h
src/gui/: CMakeLists.txt
src/gui/iosgui/: CMakeLists.txt  IOSWindowSystem.cpp
src/imgui/: CMakeLists.txt  imgui_extension.cpp
src/ios/: project.yml
src/ios/App/: CemuApp.swift  ContentView.swift  GameManager.swift  MetalView.swift
src/ios/Bridge/: Cemu-Bridging-Header.h  CemuBridge.h  CemuBridge.mm
src/ios/Emulation/: EmulationEngine.swift  MemoryManager.swift
src/util/helpers/: StringHelpers.h  StringHelpers_ios.h
